<resources>
    <string name="app_name">Gizi</string>
    <string name="title_home">Home</string>
    <string name="loading">Memproses </string>
    <string name="title_start">Start</string>
    <string name="title_login">Login</string>
    <string name="title_verify">Verify</string>
    <string name="title_register">Register</string>
    <string name="title_article">Article</string>
    <string name="title_nutriai">NutriAI</string>
    <string name="title_medrec">MedRec</string>
    <string name="title_profile">Profile</string>
    <string name="article_description">Article Description</string>
    <string name="article_title">Article Title</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_message_here">error_message_here</string>
    <string name="author">Author</string>
    <string name="published_at">Diunggah pada : %1$s</string>
    <string name="article_content">Article Content</string>
    <string name="description">Description</string>
    <string name="baca_di_web_browser">Buka di Web Browser</string>
    <string name="tambah">Tambah</string>
    <string name="empty_kid">Belum ada data anak</string>
    <string name="wave">Hallo, Moms!</string>
    <string name="nutrition_calculator_title">Nutrition Calculator</string>
    <string name="reminder_title">Pengingat Imunisasi</string>
    <string name="milestone_title">Milestone</string>
    <string name="detection">Under-Five Disease Detection</string>
    <string name="soon">Coming Soon</string>
    <string name="news_title">Kabar Baby mu!</string>
    <string name="card_news_description">Pada usia kehamilan 8 minggu, janin Moms mengalami perkembangan pesat. Jantungnya sudah berdetak, dan sebagian besar terbentuk dengan mata, hidung, dan telinga yang mulai terlihat. Tangan dan kaki kecilnya mulai tumbuh dengan jari-jari yang menyertainya.</string>


    <string name="jenis_kelamin_profile">Jenis Kelamin\t\t\t\t\t\t\t\t: %1$s</string>
    <string name="tanggal_lahir_anak_profile">Tanggal Lahir\t\t\t\t\t\t\t\t\t: %1$s</string>
    <string name="usia_anak_profile">Usia\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t: %1$d bulan</string>
    <string name="berat_anak_profile">Berat\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t: %1$.2f kg</string>
    <string name="tinggi_anak_profile">Tinggi\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t: %1$.2f cm</string>

    <string name="tambah_data">Tambah Data</string>
    <string name="update_data">Ubah Data Anak</string>
    <string name="add_data">Tambah Data Anak</string>
    <string name="analyze_kid_data">Analisis Data Anak</string>
    <string name="analyze_pregnancy_data">Analisis Data Kehamilan</string>
    <string name="perbarui_data">Perbarui Data</string>
    <string name="kembali">Kembali</string>
    <string name="isi_data_anak">Isi Data Anak</string>
    <string name="isi_data_kehamilan">Isi Data Kehamilan</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="logout">Keluar</string>

    <string name="analisis">Analisis</string>
    <string name="Perbarui_data">Perbarui Data</string>
    <string name="username">Nama Pengguna</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="sign_up">Daftar</string>
    <string name="next">Selanjutnya</string>
    <string name="back">Batalkan</string>
    <string name="start">Mulai</string>
    <string name="title_logo">GIZI</string>
    <string name="slogan">Nutrisi Tepat, Untuk Masa Depan Hebat!</string>
    <string name="login">Masuk</string>
    <string name="pregnant">Masa Kehamilan</string>
    <string name="breastfeeding">Menyusui</string>
    <string name="havetoddler">Tumbuh Kembang Anak</string>
    <string name="role_title">Ingin Tambah Data Baru?</string>
    <string name="description_logo">Logo Aplikasi Gizi</string>
    <string name="have_account">Sudah Punya Akun? <b>Masuk</b> </string>
    <string name="dont_have_account">Belum Punya Akun? <b>Daftar</b> </string>
    <string name="warning_newest_data">Pastikan data yang ingin dianalisis adalah yang terbaru.</string>

    <string name="content_tab_mom">Welcome Mom</string>
    <string name="content_tab_kid">Welcome Kid</string>

    <string name="tab_rekomendasi_article">Rekomendasi</string>
    <string name="tab_kehamilan_article">Kehamilan</string>
    <string name="tab_nutrisi_article">Nutrisi</string>
    <string name="tab_parenting_article">Parenting</string>

    <string name="tab_mom_medrec">Kehamilan</string>
    <string name="tab_kid_medrec">Anak</string>

    <string name="nama_opsional">Nama (Opsional)</string>
    <string name="tekanan_darah_sistolik_mmhg">Tekanan Darah Sistolik (mmHg)</string>
    <string name="tekanan_darah_diastolik_mmhg">Tekanan Darah Diastolik (mmHg)</string>
    <string name="kadar_gula_darah_mmol_l">Kadar Gula Darah (mmol/L)</string>
    <string name="suhu_tubuh_c">Suhu Tubuh (°C)</string>
    <string name="detak_jantung_bpm">Detak Jantung (bpm)</string>

    <string name="tanggal_lahir_profile">Tanggal Lahir\t\t\t\t\t\t: %1$s</string>
    <string name="usia_profile">Usia\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t: %1$d tahun</string>
    <string name="tekanan_darah_profile">Tekanan Darah \t\t\t\t: %1$d / %2$d mmHg</string>
    <string name="kadar_gula_darah_profile">Kadar Gula Darah \t: %1$.1f mmol/L</string>
    <string name="suhu_tubuh_profile">Suhu Tubuh \t\t\t\t\t\t\t: %1$.1f °C</string>
    <string name="detak_jantung_profile">Detak Jantung \t\t\t\t\t: %1$d bpm</string>

    <string name="pregnancy_risk_medrec">Risiko Kehamilan:\n%1$s</string>
    <string name="wasting_risk_medrec">Risiko Wasting:\n%1$s</string>
    <string name="stunting_risk_medrec">Risiko Stunting:\n%1$s</string>
    <string name="tanggal_analisis">Tanggal Analisis</string>

    <string name="data_saat_dianalisis">Data saat dianalisis pada \n%1$s</string>
    <string name="detail_riwayat_analisis">Detail Riwayat Analisis</string>

    <string name="wasting_result">Berat Ideal Antara 10–14 kg</string>
    <string name="stunting_result">Tinggi Ideal Antara 84–92 cm</string>

    <string name="stunting_description">stunting description</string>

    <string name="send">Kirim</string>
    <string name="write_message">Tulis Sesuatu</string>
    <string name="title_info">Tulis Sesuatu Seperti:</string>
    <string name="title_description">Berikan saya resep masakan ayam curry untuk balita</string>

    <string name="berat">Berat (kg)</string>
    <string name="tinggi">Tinggi (cm)</string>
    <!---->
    <string name="hpht">HPHT</string>
    <string name="hpl">HPL</string>

    <string name="hari_pertama_haid_terakhir">Hari Pertama Haid Terakhir</string>
    <string name="hari_perkiraan_lahir">Hari Perkiraan Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="usia">Usia</string>
    <string name="tekanan_darah">Tekanan Darah</string>
    <string name="kadar_gula_darah">Kadar Gula Darah</string>
    <string name="suhu_tubuh">Suhu Tubuh</string>
    <string name="detak_jantung">Detak Jantung</string>

    <string name="hpht_value">: %1$s</string>
    <string name="hpl_value">: %1$s</string>
    <string name="tanggal_lahir_value">: %1$s</string>
    <string name="usia_value">: %1$d tahun</string>
    <string name="tekanan_darah_value">: %1$d/%2$d mmHg</string>
    <string name="kadar_gula_darah_value">: %1$.1f mmol/L</string>
    <string name="suhu_tubuh_value">: %1$.1f °C</string>
    <string name="detak_jantung_value">: %1$d bpm</string>
    <string name="tutup">Tutup</string>
    <string name="hapus_data">Hapus Data</string>

    <string name="nama_anak">Nama Anak</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>


    <string name="nama_value">: %1$s</string>
    <string name="jenis_kelamin_value">: %1$s</string>
    <string name="usia_anak_value">: %1$d bulan</string>
    <string name="tinggi_value">: %1$.2f cm</string>
    <string name="berat_value">: %1$.2f kg</string>


    <!-- result wasting -->
    <string name="wasting_normal">Berat badan anak Anda berada dalam kisaran normal sesuai dengan tinggi badannya. Tidak ada indikasi kekurangan gizi.</string>
    <string name="wasting_Risk_of_Overweight">Berat badan anak Anda cenderung melebihi kisaran normal untuk tinggi badannya. Perhatikan pola makan dan aktivitas fisik untuk mencegah obesitas.</string>
    <string name="wasting_Severely_Underweight">Berat badan anak Anda jauh di bawah kisaran normal untuk tinggi badannya. Hal ini menunjukkan adanya kekurangan gizi serius yang memerlukan perhatian segera.</string>
    <string name="wasting_Underweight">Berat badan anak Anda sedikit di bawah kisaran normal untuk tinggi badannya. Perhatikan asupan nutrisi agar tumbuh kembangnya optimal.</string>
    <string name="wasting_detail">Keterangan Kondisi Wasting</string>
    <string name="condition_unknown">Kondisi Anak Anda Tidak Diketahui, Silahkan Isi Data dan Analisis Terlebih Dahulu</string>

    <!-- result Stunting -->
    <string name="stunting_normal">Tinggi badan anak Anda sesuai dengan standar pertumbuhan berdasarkan usianya. Tumbuh kembangnya berjalan dengan baik.</string>
    <string name="stunting_Severely_Stunted">Tinggi badan anak Anda sangat jauh di bawah standar pertumbuhan untuk usianya. Hal ini bisa menunjukkan adanya masalah gizi kronis yang serius.</string>
    <string name="stunting_Stunted">Tinggi badan anak Anda di bawah standar pertumbuhan untuk usianya. Hal ini mungkin mengindikasikan adanya gangguan pertumbuhan akibat kekurangan gizi dalam jangka panjang.</string>
    <string name="stunting_Tall">Tinggi badan anak Anda lebih tinggi dari rata-rata untuk usianya. Kondisi ini umumnya bukan masalah, tetapi tetap perlu memantau perkembangan secara menyeluruh.</string>
    <string name="stunting_detail">Keterangan Kondisi Stunting</string>

    <string name="chatbot">Gunakan gizi-bot untuk konsultasi masalah kesehatan anak</string>
    <string name="article_home">Artikel</string>
    <string name="detail_artikel">Detail Artikel</string>
    <string name="sumber">Sumber : %1$s</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>