<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/detail_riwayat_analisis"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_datetime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_saat_dianalisis"
        android:textSize="16sp" />

    <TextView
        android:layout_marginTop="16dp"
        android:id="@+id/tv_nama_anak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama_anak_df"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jenis_kelamin_profile"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_tanggal_lahir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tanggal_lahir_anak_profile"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_usia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usia_anak_profile"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_tinggi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tinggi_anak_profile"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_berat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/berat_anak_profile"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_hasil_wasting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/wasting_risk_medrec"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_hasil_stunting"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stunting_risk_medrec"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_close"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Tutup" />

        <Button
            android:id="@+id/btn_hapus_riwayat"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Hapus Data Riwayat" />
    </LinearLayout>
</LinearLayout>