<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/detail_riwayat_analisis"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_datetime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_saat_dianalisis"
        android:textSize="16sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:text="@string/hari_pertama_haid_terakhir"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_hpht_value"
                android:layout_weight="1"
                android:textSize="16sp"
                tools:text=": 1010-10-1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:text="@string/hari_perkiraan_lahir"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_hpl_value"
                android:layout_weight="1"
                android:textSize="16sp"
                tools:text=": 1011-10-1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:text="@string/tanggal_lahir"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_tanggal_lahir_value"
                android:layout_weight="1"
                android:textSize="16sp"
                tools:text=": 1110-10-1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:text="@string/usia"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_usia_value"
                android:layout_weight="1"
                android:textSize="16sp"
                tools:text=": 20 tahun" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:text="@string/tekanan_darah"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_tekanan_darah_value"
                android:layout_weight="1"
                android:textSize="16sp"
                tools:text=": 120/90 mmHg" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:text="@string/kadar_gula_darah"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_kadar_gula_darah_value"
                android:layout_weight="1"
                android:textSize="16sp"
                tools:text=": 32.1 mmol/L" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:text="@string/suhu_tubuh"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_suhu_tubuh_value"
                android:layout_weight="1"
                android:textSize="16sp"
                tools:text=": 33.3 °C" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:text="@string/detak_jantung"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_detak_jantung_value"
                android:layout_weight="1"
                android:textSize="16sp"
                tools:text=": 90 bpm" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/tv_hasil"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/pregnancy_risk_medrec"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_close"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tutup" />

        <Button
            android:id="@+id/btn_hapus_riwayat"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hapus_data" />
    </LinearLayout>
</LinearLayout>