<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tiuho22bangkit.gizi.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_article"
        android:name="com.tiuho22bangkit.gizi.ui.article.ArticleFragment"
        android:label="@string/title_article"
        tools:layout="@layout/fragment_article">
        <action
            android:id="@+id/action_to_detailFragment"
            app:destination="@id/detail_fragment" />
    </fragment>
        <fragment
            android:id="@+id/detail_fragment"
            android:name="com.tiuho22bangkit.gizi.ui.article.detail.DetailFragment"
            android:label="Detail Fragment">
            <argument
                android:name="article"
                app:argType="com.tiuho22bangkit.gizi.data.remote.ArticlesItem" />
        </fragment>

    <fragment
        android:id="@+id/navigation_nutriai"
        android:name="com.tiuho22bangkit.gizi.ui.nutriai.NutriaiFragment"
        android:label="@string/title_nutriai"
        tools:layout="@layout/fragment_nutriai" />

    <fragment
        android:id="@+id/navigation_medcheck"
        android:name="com.tiuho22bangkit.gizi.ui.medcheck.MedcheckFragment"
        android:label="@string/title_medcheck"
        tools:layout="@layout/fragment_medcheck" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.tiuho22bangkit.gizi.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_isiDataAnakFragment"
            app:destination="@id/isi_data_anak_fragment" />
    </fragment>
    <fragment
        android:id="@+id/isi_data_anak_fragment"
        android:name="com.tiuho22bangkit.gizi.ui.profile.IsiDataAnakFragment"
        android:label="Isi Data Anak" />


</navigation>